--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
 <!-- Bootstrap CSS -->
 <link href="css/bootstrap.css" rel="stylesheet">	
+<link href="css/create.css" rel="stylesheet">
 </head>
 
 <body>
@@ -34,7 +35,7 @@
     
 
     
-    <div class="jumbotron jumbotron-fluid" >
+    <div class="cabecalho" >
             <div class="container">
                 <h5 class="display-4">SSPI</h5>
                 <hr>
