--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,8 @@
     
     <div class="cabecalho" >
             <div class="container">
-                <h5 class="display-4">SSPI</h5>
-                <hr>
-                <p class="lead">Sistema de Solicitações e Práticas ISO's</p>
+                <img style="max-width: 200px;  max-height:200px;  width: auto;
+            height: auto;" src="asset/logofull.png"/>
             </div>
         </div>
 
