--- a/src/login.html
+++ b/src/login.html
@@ -24,7 +24,7 @@
           <!-- Icon -->
           <div class="fadeIn first"><br>
             <img style="max-width: 200px;  max-height:200px;  width: auto;
-            height: auto;" src="/logofull.png"/>
+            height: auto;" src="/asset/relat1.png"/>
           </div>
           <br>
       
