--- a/src/index.html
+++ b/src/index.html
@@ -51,10 +51,10 @@
             <h4 class="text-center">SELECIONE O TIPO DE RELATÓRIO</h4> 
         <div class="row">
             <div class="col-6">
-              <div class="card" style="border:0px">
+              <div class="card" align="center" style="border:0px">
                 <div class="card-body">
                     <img style="max-width: 200px;  max-height:200px;  width: auto;
-                    height: auto;" src="/asset/relat1.png" alt="Chania" align="left"> 
+                    height: auto;" src="asset/relat1.png" alt="Chania" align="left"> 
                   <h5 class="text-warning"><b>RNC</b></h5>
                   <p class="card-text"><b><i>Relatório de <br> Não Conformidade</i></b></p>
                   <p class="card-text">Responsável por um texto que serve de apoio para identificar espaçamento correto e tamanho de descriçao.</p>
@@ -66,7 +66,7 @@
               <div class="card" style="border:0px">
                 <div class="card-body">
                     <img style="max-width: 200px;  max-height:200px;  width: auto;
-                    height: auto;" src="/asset/relat2.png" alt="Chania" align="left"> 
+                    height: auto;" src="asset/relat2.png" alt="Chania" align="left"> 
                   <h5 class="text-primary"><b>SACP</b></h5>
                   <p class="card-text"><b><i>Solicitação de Ação Corretiva, Preventiva (e mudanças no SGI)</i></b></p>
                   <p class="card-text">Responsável por um texto que serve de apoio para identificar espaçamento correto e tamanho de descriçao.</p>
